# databricks_privileges

./: .gitignore  README.md  pyproject.toml  test_github_token.py
.github/instructions/: project_instructions.instructions.md
.github/workflows/: apply_privileges.yaml  apply_priviliges.yaml  hatch.yaml  main.yaml  test.yaml  validate_service_request.yaml
.github/workslows/: hatch.yml  main.yaml
docs/: ABAC_POLICIES_CRUD.md  GITHUB_INTEGRATION.md  QUICK_START.md  SERVICE_REQUESTS.md
examples/: pr_service_requests.py
service_requests/priviliges/: test_request.yml  test_request_decomissioned.yml  test_request_test_validation copy.yml  test_request_test_validation.yml
src/abac/: apply_priviliges.py
src/abac/abac/: __init__.py  abac.py
src/abac/files/: yml.py
src/abac/grants/: grants.py
src/abac/groups/: groups.py
src/abac/priviliges/: priviliges.py
src/abac/service_requests/: __init__.py  parser.py
src/abac/workspace/: workspace.py
src/privileges/: apply_priviliges.py  validate_all_service_requests.py  validate_service_request.py
src/privileges/abac/: __init__.py
src/privileges/files/: yml.py
src/privileges/github/: github.py
src/privileges/grants/: grants.py
src/privileges/logger/: logging_helper.py
src/privileges/service_requests/: parser.py
src/privileges/workspace/: workspace.py
tests/: test_abac_policies.py  test_abac_policies_integration.py  test_github_integration.py  test_service_request_parser.py  test_yml.py
